--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "dependencies": {
     "loglevel": "^1.4.1",
-    "winrmjs": "git+ssh://git@github.com/dev-rowbot/winrmjs.git"
+    "winrmjs": "git+https://github.com/dev-rowbot/winrmjs.git"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
